# DH-TransShot

./: .env.test  .gitattributes  .gitignore  CLAUDE.md  LICENSE  README.md  README_EN.md  debug.html  index.html  package.json  pnpm-lock.yaml  screenshot.html  vite.config.ts
.github/workflows/: release.yml
docs/: architecture.md  linuxdo-post-DH-TransShot.md  theme.md
docs/backend/: commands.md  config.md  entry.md  hotkey.md  ocr.md  screenshot.md  translation.md  tray.md  tts.md
docs/frontend/: app.md  components.md  hooks.md  lib.md  stores.md  types.md
scripts/: release.mjs  sync-version.mjs
src/: App.tsx  DebugApp.tsx  ScreenshotApp.tsx  SettingsApp.tsx  debug.tsx  main.tsx  screenshot.tsx  settings.tsx
src-tauri/: Cargo.toml  Info.plist  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: api_client.rs  hotkey.rs  lib.rs  main.rs  tray.rs
src-tauri/src/commands/: clipboard.rs  mod.rs  ocr.rs  screenshot.rs  settings.rs  translation.rs  tts.rs
src-tauri/src/config/: mod.rs  settings.rs
src-tauri/src/ocr/: mod.rs
src-tauri/src/screenshot/: capture.rs  mod.rs
src-tauri/src/translation/: openai_compat.rs
src-tauri/src/tts/: mod.rs
src/components/common/: TitleBar.tsx
src/components/debug/: LogPanel.tsx
src/components/screenshot/: ScreenshotOverlay.tsx
src/components/settings/: HotkeyInput.tsx  SettingsPanel.tsx
src/components/translation/: ActionButtons.tsx  LanguageSelector.tsx  SwapButton.tsx  TextArea.tsx  TranslationPanel.tsx
src/hooks/: useScreenshot.ts  useTranslation.ts
src/lib/: invoke.ts  languages.ts  windowUtils.ts
src/stores/: logStore.ts  settingsStore.ts  translationStore.ts
src/styles/: globals.css
src/types/: index.ts
