[package]
name = "dh-transshot"
version = "1.0.15"
description = "Screenshot + Translation desktop tool"
authors = ["danyhug"]
edition = "2021"

[lib]
name = "dh_transshot_lib"
crate-type = ["cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon", "image-png", "macos-private-api"] }
tauri-plugin-global-shortcut = "2"
tauri-plugin-store = "2"
reqwest = { version = "0.13", default-features = false, features = ["json", "rustls"] }
image = { version = "0.25", default-features = false, features = ["png", "jpeg"] }
base64 = "0.22"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["rt-multi-thread", "macros", "time"] }
anyhow = "1"
log = "0.4"
tauri-plugin-log = "2"
dotenvy = "0.15"
tauri-plugin-dialog = "2.7.1"

[target.'cfg(not(target_os = "macos"))'.dependencies]
xcap = "0.8"

[profile.release]
strip = true
lto = true
opt-level = "s"
codegen-units = 1
